--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_GridViewPartial_CruceNC.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/NotaDeCreditoFacturacion/_GridViewPartial_CruceNC.cshtml
@@ -46,16 +46,17 @@
             column.Caption = "# Documento";
             column.EditFormSettings.Visible = DefaultBoolean.False;
         });
+
         settings.Columns.Add(column =>
         {
             column.Width = Unit.Percentage(20);
             column.FieldName = "NumDocumento";
             column.Caption = "# Doc reemplazo";
-            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.EditFormSettings.Visible = DefaultBoolean.True;
         });
         settings.Columns.Add(column =>
         {
-            column.Width = Unit.Percentage(20);
+            column.Width = Unit.Percentage(10);
             column.FieldName = "vt_total";
             column.Caption = "Total";
             column.PropertiesEdit.DisplayFormatString = "{0:N2}";
@@ -63,7 +64,7 @@
         });
         settings.Columns.Add(column =>
         {
-            column.Width = Unit.Percentage(20);
+            column.Width = Unit.Percentage(10);
             column.FieldName = "Saldo";
             column.Caption = "Saldo";
             column.PropertiesEdit.DisplayFormatString = "{0:N2}";
@@ -71,7 +72,7 @@
         });
         settings.Columns.Add(column =>
         {
-            column.Width = Unit.Percentage(20);
+            column.Width = Unit.Percentage(10);
             column.FieldName = "Valor_Aplicado";
             column.Caption = "V. aplicado";
             column.PropertiesEdit.DisplayFormatString = "{0:N2}";
@@ -84,7 +85,7 @@
         });
         settings.Columns.Add(column =>
         {
-            column.Width = Unit.Percentage(20);
+            column.Width = Unit.Percentage(10);
             column.FieldName = "Saldo_final";
             column.Caption = "Saldo";
             column.PropertiesEdit.DisplayFormatString = "{0:N2}";
