--- a/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_GridViewPartial_guias_remision_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Facturacion/Views/GuiaRemision/_GridViewPartial_guias_remision_det.cshtml
@@ -188,6 +188,7 @@
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "gi_Total").DisplayFormat = "{0:n2}";
         settings.Settings.ShowFooter = true;
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
+        settings.ClientSideEvents.EndCallback = "function(s,e){ if (s.IsEditing()) {var editor = IdProducto;editor.Focus();}}";
     });
 }
 @grid.Bind(Model).GetHtml()
